--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -226,6 +226,10 @@
         </defs>
       </svg>
       <h1>Hello, {{ title }}</h1>
+      <h1>Gestión de Cursos</h1>
+      <app-curso-form></app-curso-form>
+      <app-curso-lista></app-curso-lista>
+
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
